--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-5-breakpoint-react-hook": "^1.1.0",
     "prettier": "^2.7.1",
     "react": "^18.0.2",
+    "react-bootstrap": "^2.7.2",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.0.2",
     "react-router-dom": "^6.3.0",
+    "sass": "^1.58.3",
+    "scss": "^0.2.4",
     "vite": "^4.0.4",
     "web-vitals": "^3.0.1"
   },
