--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "bootstrap": "^5.2.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "prettier": "^2.7.1",
     "react": "^18.0.2",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
     "scss": "^0.2.4",
+    "sort-by": "^1.2.0",
     "vite": "^4.0.4",
     "web-vitals": "^3.0.1"
   },
