--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@tanstack/react-query": "^4.26.1",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "bootstrap": "^5.2.3",
+    "antd": "^5.3.2",
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
+    "humps": "^2.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "prettier": "^2.7.1",
     "react": "^18.0.2",
-    "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.0.2",
     "react-router-dom": "^6.8.2",
