--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "cleanUrls": true,
   "framework": "vite",
+  "buildCommand": "vite build",
   "redirects": [
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/"
     }
   ]
 }
