--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@chakra-ui/react": "^2.5.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@tanstack/react-query": "^4.26.1",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "antd": "^5.3.2",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
-    "dayjs": "^1.11.7",
+    "framer-motion": "^10.10.0",
     "humps": "^2.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "prettier": "^2.7.1",
     "react": "^18.0.2",
-    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.0.2",
+    "react-hook-form": "^7.43.8",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
     "scss": "^0.2.4",
