--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,14 @@
   "cleanUrls": true,
   "framework": "vite",
   "buildCommand": "vite build",
-  "redirects": [{
-    "source": "/dashboard",
-    "destination": "/index.html"
-  }]
+  "redirects": [
+    {
+      "source": "/dashboard",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/login",
+      "destination": "/index.html"
+    }
+  ]
 }
