--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "scss": "^0.2.4",
     "sort-by": "^1.2.0",
     "vite": "^4.0.4",
+    "vite-plugin-pages": "^0.29.0",
     "web-vitals": "^3.0.1"
   },
   "scripts": {
