--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "axios": "^1.3.4",
+    "chakra-multiselect": "^0.4.1",
     "date-fns": "^2.29.3",
     "framer-motion": "^10.10.0",
     "humps": "^2.0.1",
