--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "cleanUrls": true,
   "framework": "vite",
   "buildCommand": "vite build",
   "redirects": [
@@ -9,6 +8,10 @@
     },
     {
       "source": "/login",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/availability",
       "destination": "/index.html"
     }
   ]
