--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,15 @@
   "redirects": [
     {
       "source": "/dashboard",
-      "destination": "/index.html"
+      "destination": "/"
     },
     {
       "source": "/login",
-      "destination": "/index.html"
+      "destination": "/"
     },
     {
       "source": "/availability",
-      "destination": "/index.html"
+      "destination": "/"
     }
   ]
 }
